# HadesHub

./: .gitignore  index.html  labs.html  main.js  package-lock.json  package.json  preload.js  server.js  style.css  translate.js  webcam_status.json
lab1/: main.cpp
lab1/ui/: index.html  main.js  package-lock.json  package.json  preload.js  renderer.js  style.css  translate.js
lab2/: main.cpp  pci_codes.h
lab2/ui/: index.html  main.js  package.json  preload.js  renderer.js  style.css  translate.js
lab3/: main.cpp  package.json
lab3/ui/: index.html  preload.js  renderer.js  style.css  translate.js
lab4/: CMakeLists.txt  main.cpp  main_server.cpp  main_updated.cpp  run_lab4.bat  run_webcam_monitor.bat  take_photo.js  webcam_status.json
lab4/build_test/: CMakeCache.txt  Makefile  cmake_install.cmake
lab4/ui/: debug-main.js  index.html  main.js  package.json  preload.js  renderer.js  style.css  translate.js  webcam_status.json
lab5/: README.md  main.cpp
lab5/ui/: index.html  main.js  package-lock.json  package.json  preload.js  renderer.js  style.css  translate.js
